Fixed api an microservices section uncorrectly displayin on small screens

--- a/style.css
+++ b/style.css
@@ -46,12 +46,6 @@ body {
   text-decoration: underline;
 }
 
-@media (max-width: 600px) {
-  #navbar {
-    justify-content: center;
-  }
-}
-
 #welcome-section {
   height: 100vh;
   display: flex;
@@ -114,13 +108,14 @@ body {
   align-items: center;
   background-color: rgb(0, 0, 0, 0.4);
   width: 50%;
-  margin: 0 auto;
+  margin: 20px auto;
   color: whitesmoke;
 }
 
 #backend-wrapper ul {
   list-style-type: none;
   font-size: 1.2em;
+  padding: 0;
 }
 
 #backend-wrapper ul li {
@@ -245,4 +240,25 @@ body {
 
 #contacts span a {
   color: white;
+}
+
+@media screen and (max-width: 600px) {
+  #navbar {
+    justify-content: center;
+  }
+  
+  #backend-wrapper, #contacts {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .profile-link {
+    font-size: 1.2em;
+  }
+  
+  .profile-link img {
+    width: 30px;
+    height: 30px;
+  }
 }
